--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server --watch-poll --inline --hot"
+    "start": "webpack-dev-server --watch-poll --inline --hot",
+    "deploy-gh": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,8 @@
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
